Update documentation for simplified design
- Update README: Remove references to Tour, Merch, Booking, About sections
- Clean up customization guide to focus on 5 core sections
- Update project structure file sizes: HTML 177 lines, CSS ~430 lines, JS ~150 lines
- Update TODO list to remove outdated features
- Simplify integration points section
- Update HTML meta description to match simplified focus
- Add section structure comment to CSS
- Update JS file header comments
- Remove contact form handler from JS (simplified contact section)
- Document responsive breakpoints and color scheme clearly

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
     <!-- Essential meta tags for SEO and mobile responsiveness -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CUSTOMIZE: Update description for SEO (appears in search results) -->
-    <meta name="description" content="Thrifted Tease - Official Band Website. Discover our music, photos, merch, and tour dates.">
-    <!-- CUSTOMIZE: Add band-specific keywords for search engines -->
-    <meta name="keywords" content="Thrifted Tease, band, music, indie, streaming, merch">
-    <title>Thrifted Tease | Band</title>
+    <meta name="description" content="Thrifted Tease - Official Band Landing. Stream music, view photos, and connect with us.">
+    <meta name="keywords" content="Thrifted Tease, band, music, indie, streaming">
+    <title>Thrifted Tease | Official Band</title>
     <!-- Font Awesome 6.4.0 CDN - Provides all social media and UI icons automatically -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Main stylesheet - contains all colors, layouts, animations, and responsive breakpoints -->
